# learning-android

./: build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app-aidl-client/: build.gradle.kts
app-aidl-client/src/main/: AndroidManifest.xml
app-aidl-client/src/main/res/layout/: activity_main.xml
app-aidl-client/src/main/res/values/: strings.xml  themes.xml
app-aidl-server/: build.gradle.kts
app-aidl-server/src/main/: AndroidManifest.xml
app-aidl-server/src/main/res/values/: strings.xml
app-audio-echo/: build.gradle.kts
app-audio-echo/src/main/: AndroidManifest.xml
app-audio-echo/src/main/cpp/: audio_main.cpp
app-audio-echo/src/main/res/values/: strings.xml
app-camera/: build.gradle.kts
app-camera/src/main/: AndroidManifest.xml
app-camera/src/main/res/values/: strings.xml
app-hello-jni/: build.gradle.kts
app-hello-jni/src/main/: AndroidManifest.xml
app-hello-jni/src/main/cpp/: CMakeLists.txt  hello-jni.cpp  plasma.c
app-hello-jni/src/main/res/layout/: activity_hello_jni.xml
app-hello-jni/src/main/res/values/: strings.xml
app-learning-java/: build.gradle
app-learning-java/src/main/res/values/: strings.xml
app-learning-kotlin/: build.gradle.kts
app-paging/: build.gradle.kts
app-paging/schemas/com.learn.paging.HeroDb/: 1.json
app-viewpager/: build.gradle.kts
app-workmanager/: build.gradle.kts
app-workmanager/src/main/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
common/: build.gradle.kts
deps-plugin/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
(+88 files in other folders)
